# haskell-greeter

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  greeter.cabal
app/: Main.hs
src/: Greeter.hs
